# universe-sim

./: .gitignore  CMakeLists.txt  readme.md
cmake/: FindGLFW.cmake
config/: simulation.json
shaders/: bloom_extract.frag  blur.frag  composite.frag  fullscreen.vert  lensing.frag  particle.frag  particle.vert  tonemap.frag  trail.frag  trail.vert  vignette.frag  volumetric.frag  volumetric.vert
src/: application.cpp  application.h  main.cpp
src/cuda/: cuda_utils.h  density_field.cu  density_field.cuh  diagnostics.cu  diagnostics.cuh  interop.cu  interop.cuh  kernels.cu  kernels.cuh  lod.cu  lod.cuh  morton.cu  morton.cuh  octree.cu  octree.cuh  physics.cu  physics.cuh  profiler.cu  profiler.cuh  stellar_evolution.cu  stellar_evolution.cuh  trails.cu  trails.cuh
src/physics/: initial_conditions.cpp  initial_conditions.h  particle_system.cpp  particle_system.h  simulation.cpp  simulation.h
src/render/: camera.cpp  camera.h  olumetric_renderer.cpp  post_process.cpp  post_process.h  renderer.cpp  renderer.h  screenshot.cpp  screenshot.h  shader_manager.cpp  shader_manager.h  text_renderer.cpp  text_renderer.h  volumetric_renderer.cpp  volumetric_renderer.h
src/ui/: input_handler.cpp  input_handler.h
